--- a/selectors.css
+++ b/selectors.css
@@ -18,7 +18,7 @@ div,p{
 h3 {
     text-align: center;
 
-    margin-top: 0;
+    margin-top: 0px;
     color: aqua;
     background-color: black;
 }
